[project]
name = "site-backup"
version = "1.0.0"
description = "A tool to create backups of WordPress and HumHub instances"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3",
    "coloredlogs",
    "python-dateutil",
    "humanfriendly",
    "PyMySQL",
    "phply",
    "dsnparse",
]

[project.scripts]
sitebackup = "sitebackup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backup"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-logging",
    "pytest-cov",
    "coverage[toml]",
    "mock",
    "flake8",
    "flake8-pep3101",
    "flake8-string-format",
    "black>=25.1.0",
    "requests",
    "flake8-unused-arguments>=0.0.13",
    "flake8-bugbear>=24.12.12",
]

[tool.pytest.ini_options]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests (may require external services)",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --tb=short -m 'not integration' --cov=backup --cov=sitebackup --cov-report=term-missing --cov-report=html --cov-report=xml"
# Use: uv run pytest -m integration  to run integration tests

[tool.coverage.run]
source = ["backup", "sitebackup"]
omit = [
    "tests/*",
    "*/tests/*",
    "*/__pycache__/*",
    "venv/*",
    ".venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
